Working on #6 and #3.
A small amount of progress; didn't get a whole lot of sleep last night.

--- a/cosmo-testing-anim.ini
+++ b/cosmo-testing-anim.ini
@@ -11,9 +11,9 @@ Input_File_Name=test_scene.pov
 Output_File_Name=anim/testing/
 
 Initial_Frame=1
-Final_Frame=60 * 0.08334    ;midpoint to Mercury
+Final_Frame=60 * 0.08334 * 2    ;midpoint to Mercury
 Initial_Clock=0
-Final_Clock=0.08334         ;midpoint to Mercury
+Final_Clock=0.08334 * 2         ;midpoint to Mercury
 
 Quality=8
 
