--- a/cosmo-testing-anim.ini
+++ b/cosmo-testing-anim.ini
@@ -10,8 +10,10 @@ Height=400
 Input_File_Name=test_scene.pov
 Output_File_Name=anim/testing/
 
+;10 frames for transit between bodies, 10 frames for working with views at
+;each body
 Initial_Frame=1
-Final_Frame=60
+Final_Frame=201
 Initial_Clock=0
 Final_Clock=1
 
