En route to #6 (the whole solar system though, actually; added variable number of frames information.

--- a/cosmo-testing-anim2.ini
+++ b/cosmo-testing-anim2.ini
@@ -13,7 +13,8 @@ Output_File_Name=anim/testing/
 ;10 frames for transit between bodies, 10 frames for working with views at
 ;each body
 Initial_Frame=1
-Final_Frame=201
+;NOTE the following must match Total_Frames in anim.inc
+Final_Frame=400	
 Initial_Clock=0
 Final_Clock=1
 
