Just a comment change in the testing .ini file.

--- a/cosmo-testing-anim2.ini
+++ b/cosmo-testing-anim2.ini
@@ -10,8 +10,9 @@ Height=300
 Input_File_Name=anim/linear-n-steady-test.pov
 Output_File_Name=anim/testing/
 
-;10 frames for transit between bodies, 10 frames for working with views at
-;each body
+;variable number of frames depending on the Final_Frame number specified here,
+;which must match Total_Frames in anim.inc for proper rendering in the
+;animation sequence
 Initial_Frame=1
 ;NOTE the following must match Total_Frames in anim.inc
 Final_Frame=400	
